--- a/src/app/grade/grade.page.scss
+++ b/src/app/grade/grade.page.scss
@@ -1,33 +1,52 @@
-ion-accordion ion-item[slot="header"] {
-    --background: linear-gradient(to right, #f8f9ffc9, #dfdef8);
-}
-
-ion-accordion-group {
-    ion-accordion {
-        ion-item[slot="header"] {
-            ion-label {
-                font-weight: bold;
+// MODIFICACIONES-----------------------------------------------------------
+ion-grid {
+    margin: 5px;
+    ion-row {
+        border: 1px solid #f6f1f1; // Borde de cada notificación
+        background-color: var(--ion-color-primary-contrast);
+        border-radius: 10px;
+        box-shadow: 0 5px 5px rgba(13, 13, 13, 0.2);
+        margin-bottom: 10px; // Espacio entre notificaciones
+        padding: 10px;
+        ion-col {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            &:nth-child(1) {
+                justify-content: flex-start;
+                padding: 0px;
+            }
+            &:nth-child(2) {
+                flex-grow: 1;
                 color: var(--ion-color-text1);
             }
-        }
-        
-        div[slot="content"] {
-            background-color: #ffffffa1;
-            margin: 0px;
-            padding: 15px;
-            
-            //Scores' styles
-            &:nth-child(2) {
-                background-color: var(--ion-color-secondary-tint);
-                color: #fff;
-                font-weight: bold;
-            }
-            
-            //Commits' styles
             &:nth-child(3) {
-                font-style: italic;
-                color: #292626ab;
+                justify-content: right;
             }
         }
     }
 }
+
+.extracurricular-text {
+    font-size: 18px;
+    font-style: oblique;
+    font-weight: bold;
+}
+
+.extracurricular-code {
+    font-size: 15px;
+    color: var(--ion-color-text2);
+    padding: 5px;
+}
+
+.extracurricular-info {
+    font-size: 12px;
+}
+
+.purple-icon {
+    color: var(--ion-color-primary);
+    font-size: 30px;
+    margin-right: 10px;
+}
+
+// MODIFICACIONES-----------------------------------------------------------
