--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -1,64 +1,30 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border  ">
   <ion-toolbar>
-<!-- Boton para regresar -->    
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Acciones disponibles</ion-title>
+      <ion-buttons slot="start">
+          <ion-back-button default-href="#" routerLink="/"></ion-back-button>
+          <ion-title class="dark">Regresar</ion-title>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-list lines="inset">
+    <ion-item class="ion-text-wrap" button fill="clear" [routerLink]="['/lista',grupoid]" >
+      <ion-icon slot="start" src="assets/grupoMenu/code.svg"></ion-icon>
+      <ion-label>Ver asistencia</ion-label>
+      <!-- lista de asistencia -->
+      <!-- <ion-button fill="clear" [routerLink]="['/lista-asistencia',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
+    </ion-item>
+    <ion-item>
+      <!-- Tomar asistencia por  -->
+      <ion-label>Tomar asistencia</ion-label>
+    </ion-item>
+    <ion-item button fill="clear" [routerLink]="['/codigos',grupoid]">
+      <ion-icon slot="start" src="assets/grupoMenu/qr-code.svg"></ion-icon>
+      <ion-label>Codigo</ion-label>
+      <!-- <ion-button fill="clear" [routerLink]="['/codigos',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
+    </ion-item>
+  </ion-list>
 
-  <ion-grid>
-    <!-- Crear una fila por cada elemento --> 
-    <ion-row>
-      <!-- Crear columna para el texto-->
-      <ion-col size = "6" [routerLink]="['/lista', grupoid]">
-        <ion-label>
-          <h2>Ver integrantes</h2>
-        </ion-label>
-      </ion-col>
-      <!-- Crear columna para icono de flecha-->
-      <ion-col size = "6" class="ion-justify-content-end" [routerLink]="['/lista', grupoid]">
-        <ion-icon name="arrow-forward-outline"></ion-icon>
-      </ion-col>
-    <!-- Cierro filas y grid -->
-    </ion-row>
-  </ion-grid>
   
-  <ion-grid>
-    <!-- Crear una fila por cada elemento --> 
-    <ion-row>
-      <!-- Crear columna para el texto-->
-      <ion-col size = "6">
-        <ion-label>
-          <h2>Tomar asistencia</h2>
-        </ion-label>
-      </ion-col>
-      <!-- Crear columna para icono de flecha-->
-      <ion-col size = "6" class="ion-justify-content-end">
-        <ion-icon name="arrow-forward-outline"></ion-icon>
-      </ion-col>
-    <!-- Cierro filas y grid -->
-    </ion-row>
-  </ion-grid>
-
-  <ion-grid>
-    <!-- Crear una fila por cada elemento --> 
-    <ion-row>
-      <!-- Crear columna para el texto-->
-      <ion-col size = "6">
-        <ion-label>
-          <h2>Codigo</h2>
-        </ion-label>
-      </ion-col>
-      <!-- Crear columna para icono de flecha-->
-      <ion-col size = "6" class="ion-justify-content-end">
-        <ion-icon name="arrow-forward-outline"></ion-icon>
-      </ion-col>
-    <!-- Cierro filas y grid -->
-    </ion-row>
-  </ion-grid>
-
-<ion-content>
+</ion-content>
