--- a/src/app/asistencia/asistencia.page.scss
+++ b/src/app/asistencia/asistencia.page.scss
@@ -1,41 +1,10 @@
-ion-header {
-    ion-toolbar {
-        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
-        color: #fff;
-        font-weight: bold;
-    }
+ion-item{
+    --background: #F6F6F6;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 4px;
+    --border-color:#F6F6F6;
 }
-
-ion-grid {
-    margin: 5px;
-    ion-row {
-        border: 1px solid #f6f1f1; // Borde de cada notificación
-        background-color: var(--ion-color-primary-contrast);
-        border-radius: 10px;
-        box-shadow: 0 5px 5px rgba(13, 13, 13, 0.2);
-        margin-bottom: 10px; // Espacio entre notificaciones
-        padding: 10px;
-        ion-col {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            &:nth-child(1) {
-                justify-content: flex-start;
-                padding: 0px;
-            }
-            &:nth-child(2) {
-                flex-grow: 1;
-                color: var(--ion-color-text12);
-            }
-            &:nth-child(3) {
-                justify-content: right;
-            }
-        }
-    }
-} 
-
-.icon-large {
-    font-size: 30px; /* Tamaño de los iconos de los archivos */
-  }
 
 
