--- a/src/app/lista/lista.page.html
+++ b/src/app/lista/lista.page.html
@@ -1,68 +1,25 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
+  
   <ion-toolbar>
-<!-- Boton para regresar -->    
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Integrantes del equipo</ion-title>
+    <ion-title>Lista Asistencia</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
   
   <ion-list>
-    <!-- Crear un item por cada elemento --> 
-    <ion-item button *ngFor="let lista of listas">
-      <!-- Crear una espacio para cada icono --> 
+    <ion-item button *ngFor="let lista of listas" [routerLink]="['/asistencia-detalle',lista.list_id]">
       <ion-avatar aria-hidden="true" slot="start">
         <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
       </ion-avatar>
-      <!-- Crear una espacio para texto --> 
-      <ion-label>{{lista.list_fkperson}}</ion-label>
-
-      <!-- Crear columna para boton de opciones -->
-        <!-- Boton de opciones -->        
-          <ion-button id="click-trigger-{{lista.list_id}}" size="small">
-            <ion-icon name="ellipsis-vertical"></ion-icon>
-          </ion-button>
-          <ion-popover
-            trigger="click-trigger-{{lista.list_id}}"
-            [dismissOnSelect]="true"
-            [keepContentsMounted]="true"
-            side="end">
-            <ng-template>
-              <ion-content>
-                <ion-list>
-                  <!-- Opcion de eliminar  -->
-                  <ion-item 
-                    [button]="true" 
-                    [detail]="false"
-                    (click)="eliminar(lista.list_id)"> 
-                    <ion-icon name="trash"></ion-icon>
-                    Eliminar
-                  </ion-item>
-                  <!-- Opcion de modificar -->
-                  <ion-item
-                    [button]="true"
-                    [detail]="false"
-                    (click)="editar(lista.list_id)">  <!-- Agregamos la opción de Modificar -->
-                    <ion-icon name="create"></ion-icon>
-                    Modificar
-                  </ion-item>
-                  <!-- Cierro mi lista  -->
-                </ion-list>
-              </ion-content>
-            </ng-template>
-          </ion-popover>
-    <!-- Cierro filas y grid -->      
+      <ion-label>{{lista.person}}</ion-label>
     </ion-item>
   </ion-list>
-  
-</ion-content>
+  <app-paginacion [total]="totalAlumnos" (click)="pagina($event)"></app-paginacion>
 
-<!-- Boton flotante de agregar -->
-<ion-fab slot="fixed" vertical="bottom" horizontal="end">
-  <ion-fab-button (click)="new()">
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+
+</ion-content>
