--- a/src/app/classroom/classroom.page.html
+++ b/src/app/classroom/classroom.page.html
@@ -13,7 +13,7 @@
 
   <ion-grid>
     <!-- Crear una fila por cada elemento --> 
-    <ion-row *ngFor= "let classroom of classrooms" >
+    <ion-row *ngFor= "let classroom of classrooms; let i = index" >
       <!-- Crear columna para el icono-->
       <ion-col size="1">
         <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
@@ -36,11 +36,11 @@
       <!-- Crear columna para boton de opciones -->
       <ion-col size="auto">
         <!-- Boton de opciones -->        
-          <ion-button id="click-trigger-{{classroom.clas_id}}" size="small">
+          <ion-button id="click-trigger-{{classroom.clas_id}} -{{i}}" size="small">
             <ion-icon name="ellipsis-vertical"></ion-icon>
           </ion-button>
           <ion-popover
-            trigger="click-trigger-{{classroom.clas_id}}"
+            trigger="click-trigger-{{classroom.clas_id}} -{{i}}"
             [dismissOnSelect]="true"
             [keepContentsMounted]="true"
             side="end">
