--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -13,7 +13,7 @@
  
   <ion-grid>
     <!-- Crear una fila por cada elemento --> 
-    <ion-row *ngFor="let grupo of grupos" >
+    <ion-row *ngFor="let grupo of grupos; let i = index" >
       <!-- Crear columna para el icono-->
       <ion-col size="1" [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
         <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
@@ -36,11 +36,11 @@
       <!-- Crear columna para boton de opciones -->
       <ion-col size="auto">
         <!-- Boton de opciones -->        
-          <ion-button id="click-trigger-{{grupo.gro_id}}" size="small">
+          <ion-button id="click-trigger-{{grupo.gro_id}} -{{i}}" size="small">
             <ion-icon name="ellipsis-vertical"></ion-icon>
           </ion-button>
           <ion-popover
-            trigger="click-trigger-{{grupo.gro_id}}"
+            trigger="click-trigger-{{grupo.gro_id}} -{{i}}"
             [dismissOnSelect]="true"
             [keepContentsMounted]="true"
             side="end">
