--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -15,7 +15,7 @@
       <!-- lista de asistencia -->
       <!-- <ion-button fill="clear" [routerLink]="['/lista-asistencia',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
-    <ion-item>
+    <ion-item button fill="clear" [routerLink]="['/tomar-asistencia',grupoid]">
       <!-- Tomar asistencia por  -->
       <ion-label>Tomar asistencia</ion-label>
     </ion-item>
@@ -24,7 +24,5 @@
       <ion-label>Codigo</ion-label>
       <!-- <ion-button fill="clear" [routerLink]="['/codigos',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
-  </ion-list>
-
-  
+  </ion-list>  
 </ion-content>
