--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -10,28 +10,27 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-searchbar class="custom"></ion-searchbar>
+
 
   <ion-list [inset]="true">
     <ion-item-sliding button *ngFor="let codigo of data">
-      <ion-item>
-        <ion-label class="ion-text-wrap">
-          <h2>{{codigo.cod_code}}</h2>
-          <!-- <p>{{codigo.cod_time}}</p>
-          <p>{{codigo.cod_date | date:'y-MM-dd'}}</p> -->
-        </ion-label>
-      </ion-item>
+
+        <ion-item >
+          <ion-badge slot="start">{{codigo.total}}</ion-badge>
+          <ion-label class="ion-text-wrap">
+            <h2>{{codigo.cod_code}} </h2>
+          </ion-label>
+        </ion-item>
+
+      
       <ion-item-options slot="end">
-        <ion-item-option color="primary" >
+        <ion-item-option color="primary" (click)="showDataAlert(codigo)" >
           <ion-icon name="color-wand-outline" size="large"></ion-icon>
         </ion-item-option>
+        <ion-item-option color="tertiary"  >
+          <ion-icon slot="icon-only" name="share" (click)="editar(codigo.cod_id,codigo.cod_fkgroup)"></ion-icon>
+        </ion-item-option>
 
-        <ion-item-option color="tertiary" (click)="showDataAlert(codigo)">
-          <ion-icon slot="icon-only" name="share"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" expandable="true">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
@@ -39,7 +38,7 @@
   <!-- Boton generar codigo  -->
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button (click)="new()">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="qr-code-outline" size="large"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
