--- a/src/app/codigos/codigos.page.scss
+++ b/src/app/codigos/codigos.page.scss
@@ -1,6 +1,8 @@
-h2{
-    color: #261b8e8c;
-    font-weight: bold;
+h2 {
+  color: #261b8e8c;
+  font-weight: bold;
 }
 
-
+.fecha-diferente {
+  background-color: #ffcccb;
+}
