--- a/src/app/generar-codigo/generar-codigo.page.html
+++ b/src/app/generar-codigo/generar-codigo.page.html
@@ -11,13 +11,13 @@
   <form [formGroup]="codigo" (ngSubmit)="guardarDatos()">
     <ion-grid> <!-- Cuadrícula de diseño -->
       <ion-row class="ion-justify-content-center ion-align-items-center">
-        <ion-thumbnail size="">
-          <ion-icon name="qr-code-outline" size="large"></ion-icon>
-        </ion-thumbnail>
+        <ion-text><h1>Selecione la duracion </h1></ion-text>
       </ion-row>
-      <ion-row class="ion-justify-content-center "> <!-- Fila de la cuadrícula -->
-        <ion-col size="12" class="ion-justify-content-center "> <!-- Columna con tamaño completo (12) -->
-          <ion-datetime presentation="time" formControlName="cod_duration"></ion-datetime>
+      <ion-row class="ion-justify-content-center ion-align-items-center"> <!-- Fila de la cuadrícula -->
+        <ion-col size="12" class="ion-justify-content-center ion-align-items-center "> <!-- Columna con tamaño completo (12) -->
+          <!-- <ion-datetime presentation="time" formControlName="cod_duration"></ion-datetime> -->
+          <ion-text class="ion-justify-content-center ion-align-items-center text-center"><h1>{{time}} minutos</h1></ion-text>
+          <ion-range aria-label="Range with ticksRange with pin" [pin]="true" [pinFormatter]="pinFormatter" [ticks]="true" [snaps]="true" [min]="5" [max]="15" (ionChange)="onIonChange($event)" formControlName="cod_duration"></ion-range>
           <div id="note" *ngFor="let validation of mensajes_validacion.cod_duration">
             <ion-note color="danger" *ngIf="getError('cod_duration')[(validation.type)]">
               <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
@@ -28,7 +28,7 @@
       <ion-row class="ion-justify-content-center ion-text-center">
         <ion-col size="12">
           <p class="ion-text-center">
-            <ion-button type="submit" expand="block" [disabled]="!codigo.valid">Enviar</ion-button>
+            <ion-button type="submit" expand="block" [disabled]="!codigo.valid">Generar</ion-button>
           </p>
         </ion-col>
       </ion-row>
