--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -15,20 +15,20 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor="let grupo of grupos; let i = index" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1" [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
+      <ion-col size="1" [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
       <!-- Crear columna para el texto-->
-      <ion-col [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
+      <ion-col [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <ion-label>
-          <h2>{{grupo.subject}} {{grupo.gro_code}}</h2>
+          <h2>{{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
           <h3>Ubicación: {{grupo.classroom}} </h3>
         </ion-label>
       </ion-col>
 
       <!-- Crear columna para boton eliminar
       <ion-col size="auto">
-        <ion-button color="danger" (click)="alertEliminar(grupo.gro_id)">
+        <ion-button color="danger" (click)="alertEliminar(grupo.listFkgroup.gro_id)">
           <ion-icon slot="icon-only" name="trash" class="custom-trash-icon"></ion-icon>
         </ion-button>
       </ion-col> -->
@@ -36,11 +36,11 @@
       <!-- Crear columna para boton de opciones -->
       <ion-col size="auto">
         <!-- Boton de opciones -->        
-          <ion-button id="click-trigger-{{grupo.gro_id}} -{{i}}" size="small">
+          <ion-button id="click-trigger-{{grupo.listFkgroup.gro_id}} -{{i}}" size="small">
             <ion-icon name="ellipsis-vertical"></ion-icon>
           </ion-button>
           <ion-popover
-            trigger="click-trigger-{{grupo.gro_id}} -{{i}}"
+            trigger="click-trigger-{{grupo.listFkgroup.gro_id}} -{{i}}"
             [dismissOnSelect]="true"
             [keepContentsMounted]="true"
             side="end">
@@ -51,7 +51,7 @@
                   <ion-item 
                     [button]="true" 
                     [detail]="false"
-                    (click)="eliminar(grupo.gro_id)"> 
+                    (click)="eliminar(grupo.listFkgroup.gro_id)"> 
                     <ion-icon name="trash"></ion-icon>
                     Eliminar
                   </ion-item>
@@ -59,7 +59,7 @@
                   <ion-item
                     [button]="true"
                     [detail]="false"
-                    (click)="editar(grupo.gro_id)">  <!-- Agregamos la opción de Modificar -->
+                    (click)="editar(grupo.listFkgroup.gro_id)">  <!-- Agregamos la opción de Modificar -->
                     <ion-icon name="create"></ion-icon>
                     Modificar
                   </ion-item>
