Instrucciones de extra y grade completo

--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -85,7 +85,7 @@
       <ion-icon name="chevron-up-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button [routerLink]="['/newgrade']">
+      <ion-fab-button [routerLink]="['/newgrade', grupoid]">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
       <!-- MODIFICACIONES----------------------------------------------------------- -->
