--- a/src/app/notextracurricular/notextracurricular.page.html
+++ b/src/app/notextracurricular/notextracurricular.page.html
@@ -55,7 +55,7 @@
                 <ion-item
                   [button]="true"
                   [detail]="false"
-                  (click)="editar(extras.extgro_fkextracurricular)"> 
+                  (click)="editar(extras.extgro_id, extras.ext_name, extras.ext_code)"> 
                   <ion-icon name="create"></ion-icon>
                   Modificar 
                 </ion-item>
