--- a/src/app/menunoti/menunoti.page.html
+++ b/src/app/menunoti/menunoti.page.html
@@ -9,45 +9,28 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/file.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/notextracurricular', grupoid]">Eventos</ion-button>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/grade', grupoid]">Calificaciones</ion-button>
-    </ion-item>
-  </ion-list>
 
-  <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
-    
-    <!-- Boton principal -->
-    <ion-fab-button>
-      <ion-icon name="chevron-down-circle"></ion-icon>
-    </ion-fab-button>
-
-    <ion-fab-list side="bottom">
-      <!-- Botones secundarios -->
-      <!-- Tabla group -->
-      <ion-fab-button [routerLink]="['/group']">
-        <ion-icon name="information-circle-outline"></ion-icon>
-      </ion-fab-button>
-      <!-- Tabla classroom -->
-      <ion-fab-button [routerLink]="['/classroom']">
-        <ion-icon name="business-outline"></ion-icon>
-      </ion-fab-button>
-      <!-- Tabla major -->
-      <ion-fab-button [routerLink]="['/major']">
-        <ion-icon name="business-outline"></ion-icon>
-      </ion-fab-button>
-      <!-- Tabla subject -->
-      <ion-fab-button [routerLink]="['/subject']">
-        <ion-icon name="business-outline"></ion-icon>
-      </ion-fab-button>
-      
-
-    </ion-fab-list>
-  </ion-fab>
+  <ion-grid>
+    <!-- Primera fila de elementos -->
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+        <!-- Botón para la página 'asistencia' -->
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/notextracurricular', grupoid]">
+          <ion-icon aria-hidden="true" src="assets/icon/asistencia.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Eventos</ion-label>
+      </ion-col>
+      <!-- Botón para Notificaciones -->
+      <ion-col>
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/grade', grupoid]">
+          <ion-icon size="large" src="assets/icon/Noti.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Calificaciones</ion-label>
+      </ion-col>
+      <!-- Botón para la página 'library' -->      
+    <!-- Cierro primera fila de elementos -->
+    </ion-row>
+  <!-- Cierro grid -->
+  </ion-grid>
   
 </ion-content>
