--- a/src/app/newextracurricular/newextracurricular.page.html
+++ b/src/app/newextracurricular/newextracurricular.page.html
@@ -25,7 +25,7 @@
             </ion-note>
         </div>
         </ion-col>
-        <ion-col size="12">
+        <!-- <ion-col size="12">
         <ion-item>
             <ion-label position="floating" color="primary">Grupo</ion-label>
             <ion-input type="text" formControlName="extgro_fkgroup"
@@ -38,7 +38,7 @@
             <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
             </ion-note>
         </div>
-        </ion-col>
+        </ion-col> -->
         <ion-col size="12">
         <ion-item>
             <ion-label position="floating" color="primary">Comentario</ion-label>
