--- a/src/app/newgrade/newgrade.page.html
+++ b/src/app/newgrade/newgrade.page.html
@@ -54,7 +54,7 @@
         </ion-col>
 
         <!-- MODIFICACIONES----------------------------------------------------------- -->
-        <ion-col size="12">
+        <!-- <ion-col size="12">
           <ion-item>
               <ion-label position="floating" color="primary">Grupo</ion-label>
               <ion-input type="text" formControlName="gra_fkgroup"
@@ -67,7 +67,7 @@
           <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
           </ion-note>
           </div>
-          </ion-col>
+          </ion-col> -->
 
       </ion-row>
     </ion-grid>
@@ -96,7 +96,7 @@
 
             <!-- MODIFICACIONES----------------------------------------------------------- -->
             <tr>
-              <th>Grade</th>
+              <!-- <th>Grade</th> -->
               <th>Alumno</th>
               <th>Calificación</th>
               <th>Comentario</th>
@@ -106,7 +106,7 @@
             <tr>
 
               <!-- MODIFICACIONES----------------------------------------------------------- -->
-              <td>
+              <!-- <td>
                 <ion-input type="text" formControlName="graper_fkgrade"
                 class="form-control"></ion-input>
                 <div id="note" *ngFor="let validation of
@@ -116,7 +116,7 @@
                 <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
                 </ion-note>
                 </div>
-              </td>
+              </td> -->
 
               <td>
                 <ion-select formControlName="graper_fkperson" class="form-control">
