--- a/src/app/updategrade/updategrade.page.html
+++ b/src/app/updategrade/updategrade.page.html
@@ -14,6 +14,8 @@
       <ion-row> <!-- Fila de la cuadrícula -->
         <ion-col size="12">
 
+          <div class="table-container">
+
           <table class="table">
 
             <tr>
@@ -52,6 +54,9 @@
           </ng-container>
 
           </table>
+
+          </div>
+
           </ion-col>
         </ion-row>
       </ion-grid>
