--- a/src/app/updategrade/updategrade.page.html
+++ b/src/app/updategrade/updategrade.page.html
@@ -38,11 +38,11 @@
               </td>
 
               <td>
-                <ion-label color="primary">{{grade.person}}</ion-label>
+                <ion-label color="primary">{{grade.graper_fkperson}}</ion-label>
               </td>
 
               <td>
-                <ion-label color="primary">{{grade.grade}}</ion-label>
+                <ion-label color="primary">{{grade.graper_fkgrade}}</ion-label>
               </td>
 
               <td>
@@ -60,5 +60,16 @@
           </ion-col>
         </ion-row>
       </ion-grid>
+
+      <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+        <ion-fab-button>
+          <ion-icon name="chevron-up-circle"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="top">
+          <ion-fab-button (click)="new()">
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab>
   
 </ion-content>
