Checar por favor
No puedo avanzar del login

--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -9,13 +9,13 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="inset">
-    <ion-item class="ion-text-wrap" button fill="clear" [routerLink]="['/lista',grupoid]" >
+    <ion-item class="ion-text-wrap" button fill="clear" [routerLink]="['/lista-asistencia',grupoid]" >
       <ion-icon slot="start" src="assets/grupoMenu/code.svg"></ion-icon>
       <ion-label>Ver asistencia</ion-label>
       <!-- lista de asistencia -->
       <!-- <ion-button fill="clear" [routerLink]="['/lista-asistencia',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
-    <ion-item>
+    <ion-item button fill="clear" [routerLink]="['/tomar-asistencia',grupoid]">
       <!-- Tomar asistencia por  -->
       <ion-label>Tomar asistencia</ion-label>
     </ion-item>
@@ -24,7 +24,5 @@
       <ion-label>Codigo</ion-label>
       <!-- <ion-button fill="clear" [routerLink]="['/codigos',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
-  </ion-list>
-
-  
+  </ion-list>  
 </ion-content>
