--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -97,7 +97,7 @@
    */
 
   body {
-    --ion-color-primary: #261b8e8c;
+    --ion-color-primary: #8074ED;
     --ion-color-primary-rgb: 27,142,140;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
