--- a/src/app/question/question.page.html
+++ b/src/app/question/question.page.html
@@ -27,7 +27,7 @@
       <!-- Crear columna para boton de opciones -->
       <ion-col size="auto">
         <!-- Boton de opciones -->
-        <ion-button id="click-trigger-{{question.que_id}}" size="small">
+        <ion-button id="click-trigger-{{question.que_id}}" size="small" class="botonR">
           <ion-icon name="ellipsis-vertical"></ion-icon>
         </ion-button>
         <ion-popover trigger="click-trigger-{{question.que_id}}" [dismissOnSelect]="true" [keepContentsMounted]="true"
