--- a/src/app/question/question.page.html
+++ b/src/app/question/question.page.html
@@ -1,10 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <!--     Boton para regresar
- --> <ion-buttons slot="start">
+ --> <ion-buttons slot="start" class="bbutton">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Dudas y Preguntas</ion-title>
+    <ion-title class ="tittle">Preguntas</ion-title>
   </ion-toolbar>
 </ion-header>
 
