--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -111,7 +111,7 @@
     --ion-color-secondary-shade: #7166d1;
     --ion-color-secondary-tint: #8d82ef;
   
-    --ion-color-tertiary: #3F2CE8;
+    --ion-color-tertiary: #8074ED;
     --ion-color-tertiary-rgb: 63,44,232;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
@@ -225,10 +225,10 @@
    */
 
   .md body {
-    --ion-background-color: #354052;
+    --ion-background-color: #ffffff;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #161616;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #354052;
@@ -243,19 +243,19 @@
     --ion-color-step-400: #717171;
     --ion-color-step-450: #7d7d7d;
     --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
+    --ion-color-step-550: #e6e6e6;
+    --ion-color-step-600: #1a1a1a;
     --ion-color-step-650: #acacac;
     --ion-color-step-700: #b8b8b8;
     --ion-color-step-750: #c4c4c4;
     --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
+    --ion-color-step-850: #0f0f0f;
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
     --ion-item-background: #354052;
 
-    --ion-toolbar-background: #354052;
+    --ion-toolbar-background: #f2f2f2;
 
     --ion-tab-bar-background: #354052;
 
