--- a/src/app/components/paginacion-question/paginacion-question.component.scss
+++ b/src/app/components/paginacion-question/paginacion-question.component.scss
@@ -1,6 +1,6 @@
 .swiper-container {
     background-color: transparent;
-    color: rgb(255, 255, 255);
+    color: rgb(74, 74, 74);
     border: none;
     margin: 0 5px;
     padding: 8px 16px;
@@ -22,7 +22,7 @@
 }
 
 .active {
-    background-color: var(--ion-color-success);
+    background-color: var(--ion-color-primary);
 }
 
 .swiper-slide:active {
