Cambios en grade

--- a/src/app/grade/grade.page.html
+++ b/src/app/grade/grade.page.html
@@ -58,7 +58,7 @@
                 <ion-item
                   [button]="true"
                   [detail]="false"
-                  [routerLink]="['updategrade', grades.gra_id]"> 
+                  [routerLink]="['/updategrade', grades.gra_id, grupoid]"> 
                   <ion-icon name="create"></ion-icon>
                   Modificar 
                 </ion-item>
