--- a/src/app/extra-alu/extra-alu.page.html
+++ b/src/app/extra-alu/extra-alu.page.html
@@ -1,13 +1,78 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>extra-alu</ion-title>
+    <ion-title>Mis eventos</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">extra-alu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)" placeholder="Buscar..."></ion-searchbar>
+
+  <ion-grid>
+    <!-- MODIFICACIONES----------------------------------------------------------- -->
+    <ion-row *ngFor="let extras of extra; let i = index">
+      <!-- MODIFICACIONES----------------------------------------------------------- -->
+      <ion-col size="6">
+        <div class="rectangle-avatar">
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+          <ion-img [src]="'assets/img/extra-' + ((i % 4) + 1) + '.png'" alt="Foto"></ion-img>
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+        </div>
+      </ion-col>
+
+      <ion-col size="8">
+        <ion-label class="ion-text-wrap">
+          <h2 class="extracurricular-text">{{extras.ext_name}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_code}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_date}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_opening}}-{{extras.ext_closing}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_place}}</h2>
+          <h2 class="extracurricular-code">{{extras.ext_description}}</h2>
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+          <!-- MODIFICACIONES----------------------------------------------------------- -->
+        </ion-label>
+      </ion-col>
+
+      <ion-col>
+        <ion-button id="click-trigger-{{extras.extgro_id}}-{{i}}">
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </ion-button>
+        <ion-popover
+          trigger="click-trigger-{{extras.extgro_id}}-{{i}}"
+          [dismissOnSelect]="true"
+          [keepContentsMounted]="true"
+          side="end">
+          <ng-template>
+            <ion-content>
+              <ion-list>
+                <ion-item
+                  [button]="true"
+                  [detail]="false"
+                  [routerLink]="['extracurricular', extras.extgro_id]"> 
+                  <ion-icon name="eye"></ion-icon>
+                  Ver mas 
+                </ion-item>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-popover>
+      </ion-col>
+
+      <!-- <ion-col>
+        <ion-button (click)="alertEliminar(extras.extgro_id)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
+      </ion-col> -->
+
+    </ion-row>
+  </ion-grid>
+
+  <!-- MODIFICACIONES----------------------------------------------------------- -->
+  <app-paginacion [total]="totalExtracurriculares" (click)="pagina($event)"></app-paginacion>
+  <!-- MODIFICACIONES----------------------------------------------------------- -->
+
 </ion-content>
