--- a/src/app/alumno-form/alumno-form.page.html
+++ b/src/app/alumno-form/alumno-form.page.html
@@ -15,7 +15,7 @@
         <ion-row class="">
           <!-- Mostrar la parte del maestro si la opción seleccionada es 1 -->
           <ion-text>
-            <h1 class="fuente">Datos Maestros</h1>
+            <h1 class="fuente">Datos Estudiante</h1>
           </ion-text>
           <ion-col size="12">
             <ion-input type="text" formControlName="per_name" label="Nombres" label-placement="floating" fill="outline"
