--- a/src/app/carrusel/carrusel.page.html
+++ b/src/app/carrusel/carrusel.page.html
@@ -13,7 +13,7 @@
       
       <ion-row class="ion-justify-content-center ion-text-center">
         <ion-col size="8">
-          <ion-button shape="round" fill="outline" routerLink="/login">Inicar</ion-button>
+          <ion-button shape="round" fill="outline" routerLink="/login">Iniciar</ion-button>
         </ion-col>
         <ion-col size="8">
           <ion-button shape="round" fill="outline" routerLink="/selecion-ma">Registrar</ion-button>
