--- a/src/app/selecion-ma/selecion-ma.page.html
+++ b/src/app/selecion-ma/selecion-ma.page.html
@@ -9,13 +9,13 @@
 <ion-content [fullscreen]="true" class="ion-text-center ion-align-items-center flex-container">
   <main class="blur-white">
     <section size="12" class="">
-      <b>Que tipo de Usuario eres?</b>
+      <b>¿Qué tipo de usuario eres?</b>
       <ion-button class="ion-activatable ripple-parent custom-parent" [routerLink]="['/maestro-form']">
         Maestro
         <ion-ripple-effect></ion-ripple-effect>
       </ion-button>
       <ion-button class="ion-activatable ripple-parent custom-parent2" [routerLink]="['/alumno-form']">
-        Alumno
+        Estudiante
         <ion-ripple-effect class="custom-ripple"></ion-ripple-effect>
       </ion-button>
     </section>
