--- a/src/app/group-alum/group-alum.page.html
+++ b/src/app/group-alum/group-alum.page.html
@@ -14,11 +14,11 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor="let grupo of grupos; let i = index" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1" [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
+      <ion-col size="1" [routerLink]="['/menu1-alum', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
       <!-- Crear columna para el texto-->
-      <ion-col [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
+      <ion-col [routerLink]="['/menu1-alum', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
         <ion-label>
           <h2>{{grupo.subject}} {{grupo.listFkgroup.gro_code}}</h2>
           <h3>Ubicación: {{grupo.classroom}} </h3>
@@ -51,7 +51,7 @@
       <ion-icon name="person-add"></ion-icon>
     </ion-fab-button >
     <!-- Tabla classroom -->
-    <ion-fab-button [routerLink]="['/classroom']">
+    <ion-fab-button [routerLink]="['/classroom-alumn']">
       <ion-icon name="business"></ion-icon>
     </ion-fab-button>
   </ion-fab-list>
