--- a/src/app/maestro-form/maestro-form.page.html
+++ b/src/app/maestro-form/maestro-form.page.html
@@ -16,7 +16,7 @@
           <!-- Mostrar la parte del maestro si la opción seleccionada es 1 -->
           
             <ion-text>
-              <h1 class="fuente">Datos Maestros</h1>
+              <h1 class="fuente">Datos Maestro</h1>
             </ion-text>
             <ion-col size="12">
               <ion-input type="text" formControlName="tea_name" label="Nombres" label-placement="floating"
