--- a/src/app/classroom/classroom.page.html
+++ b/src/app/classroom/classroom.page.html
@@ -16,7 +16,9 @@
     <ion-row *ngFor= "let classroom of classrooms; let i = index" >
       <!-- Crear columna para el icono-->
       <ion-col size="1">
-        <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
+        <!-- MODIFICACIONES----------------------------------------------------------- -->
+        <ion-img [src]="'assets/classrooms/classrooms' + ((i % 3) + 1) + '.png'" alt="Foto"></ion-img>
+        <!-- MODIFICACIONES----------------------------------------------------------- -->
       </ion-col>
       <!-- Crear columna para el texto-->
       <ion-col>
