--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/ruta-anterior"></ion-back-button>
+      <ion-back-button default-href="#" routerLink="/"></ion-back-button>
+            <ion-title class="dark">Regresar</ion-title>
     </ion-buttons>
     <ion-title>
       Carreras Disponibles
