--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -16,7 +16,7 @@
       <!-- Crear columna para el icono-->
       <ion-col size="1" [routerLink]="['/menu1', grupo.listFkgroup.gro_id, grupo.subject, grupo.listFkgroup.gro_code]">
           <!-- MODIFICACIONES----------------------------------------------------------- -->
-          <ion-img [src]="'assets/img/grupos' + ((i % 4) + 1) + '.png'" alt="Foto"></ion-img>
+          <ion-img [src]="'assets/grupos/grupos-' + ((i % 4) + 1) + '.png'" alt="Foto"></ion-img>
           <!-- MODIFICACIONES----------------------------------------------------------- -->
       </ion-col>
       <!-- Crear columna para el texto-->
