--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/ruta-anterior"></ion-back-button>
+      <ion-back-button default-href="#" routerLink="/"></ion-back-button>
+          
     </ion-buttons>
     <ion-title>
       Carreras Disponibles
@@ -15,12 +16,10 @@
   
   <ion-grid>
     <ion-row *ngFor="let major of majors">
-      <ion-col size="1">
-        <div class="rectangle-avatar">
-          <ion-img src="https://ionicframework.com/docs/img/demos/card-media.png" alt="Foto"></ion-img>
-        </div>
-      </ion-col>
 
+      <ion-col size = "0.1">
+      </ion-col>
+      
       <ion-col size="8">
         <ion-label class="ion-text-wrap">
           <h2>{{major.maj_name}}</h2>
@@ -28,7 +27,7 @@
         </ion-label>
       </ion-col>
 
-      <ion-col>
+      <ion-col >
         <ion-button id="click-trigger-{{major.maj_id}}">
           <ion-icon name="ellipsis-vertical"></ion-icon>
         </ion-button>
@@ -45,6 +44,7 @@
                   <ion-icon name="create"></ion-icon>
                   Modificar
                 </ion-item>
+                
               </ion-list>
             </ion-content>
           </ng-template>
@@ -56,14 +56,9 @@
   </ion-grid>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button>
-      <ion-icon name="chevron-down-circle"></ion-icon>
+    <ion-fab-button (click)="newMajor()">
+      <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="top">
-      <ion-fab-button (click)="newMajor()">
-        <ion-icon name="create-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
   </ion-fab>
 
 <app-paginacion [total]="totalMajors" (click)="pagina($event)"></app-paginacion>
